Improved validation and deep object comparison.

--- a/contracts/v1/create_order_success.yaml
+++ b/contracts/v1/create_order_success.yaml
@@ -25,7 +25,7 @@ contract:
       orderId: <anyString>
       customer: Rick
       items:
-        - product: Hamburger
+        - product: Hamborger
           quantity: 2
           price: 20
         - product: Fries
