--- a/contracts/v1/create_order_success.yaml
+++ b/contracts/v1/create_order_success.yaml
@@ -1,6 +1,6 @@
 contract:
   request:
-    path: /orders
+    path: /v1/orders
     method: POST
     body:
       customer: Rick
@@ -22,10 +22,10 @@ contract:
   response:
     statuscode: 200
     body:
-      orderId: <anyString>
+      orderId: <anyNumber>
       customer: Rick
       items:
-        - product: Hamborger
+        - product: Hamburger
           quantity: 2
           price: 20
         - product: Fries
@@ -36,4 +36,4 @@ contract:
           price: 5
         - product: Milkshake
           quantity: 2
-          procie: 10
+          price: 10
