--- a/contracts/v1/create_order_success_plaintext.yaml
+++ b/contracts/v1/create_order_success_plaintext.yaml
@@ -1,6 +1,6 @@
 contract:
   request:
-    path: /orders
+    path: /v1/orders
     method: POST
     body:
       customer: Rick
@@ -20,5 +20,5 @@ contract:
     headers:
       - Content-Type: application/json
   response:
-    statuscode: 201
+    statuscode: 200
     body: OK
