--- a/contracts/v2/create_order_success.yaml
+++ b/contracts/v2/create_order_success.yaml
@@ -20,6 +20,7 @@ contract:
           procie: 10
     headers:
       - Content-Type: application/json
+      - Accept: application/json
   response:
     body:
       orderId: <anyString>
