--- a/contracts/v1/create_order_success.yaml
+++ b/contracts/v1/create_order_success.yaml
@@ -23,7 +23,7 @@ contract:
   response:
     statuscode: 200
     headers:
-      - Content-Type: application/json
+      - Content-Type: application/json; charset=utf-8
     body:
       orderId: <anyNumber>
       customer: Rick
