Verified that wildcards also work for headers. Added some TODOs in README.

--- a/contracts/v1/create_order_success.yaml
+++ b/contracts/v1/create_order_success.yaml
@@ -23,7 +23,7 @@ contract:
   response:
     statuscode: 200
     headers:
-      - Content-Type: application/json; charset=utf-8
+      - Content-Type: <anyString>
     body:
       orderId: <anyNumber>
       customer: Rick
