--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "version": "0.3.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc mocha test/**/*.spec.js"
   },
   "author": "Rick Slinkman <rw.slinkman@gmail.com> (http://rwslinkman.nl)",
   "repository": {
@@ -24,5 +24,10 @@
   "dependencies": {
     "js-yaml": "^3.13.1",
     "needle": "^2.3.3"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
+    "nyc": "^15.0.0"
   }
 }
