--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^7.1.1",
-    "nyc": "^15.0.0"
+    "nyc": "^15.0.0",
+    "rewire": "^5.0.0"
   }
 }
