--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "version": "0.3.0",
   "main": "index.js",
   "scripts": {
-    "test": "nyc mocha --recursive"
+    "test": "nyc --reporter=html --reporter=text mocha --recursive"
   },
   "author": "Rick Slinkman <rw.slinkman@gmail.com> (http://rwslinkman.nl)",
   "repository": {
