Added test for ContractValidator and refactor statuscode check to avoid weird comparison and spell checks.

--- a/contracts/v1/create_order_success.yaml
+++ b/contracts/v1/create_order_success.yaml
@@ -21,7 +21,7 @@ contract:
       Content-Type: application/json
       Accept: application/json
   response:
-    statuscode: 200
+    statusCode: 200
     headers:
       - Content-Type: <anyString>
     body:
