--- a/contracts/v1/create_order_unknownproduct.yaml
+++ b/contracts/v1/create_order_unknownproduct.yaml
@@ -17,6 +17,6 @@ contract:
     headers:
       - Content-Type: application/json
   response:
-    statuscode: 400
+    statusCode: 400
     body:
       error: <anyString>
