--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "js-yaml": "^3.13.1",
+    "junit-report-builder": "^1.3.3",
     "needle": "^2.3.3"
   },
   "devDependencies": {
