--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chai-spies": "^1.0.0",
     "mocha": "^7.1.1",
     "nyc": "^15.0.0",
-    "rewire": "^5.0.0"
+    "rewire": "^5.0.0",
+    "sinon": "^9.0.1"
   }
 }
