--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,21 +5,19 @@ name: ContactPolice CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, 'feature/docker-ci' ]
   pull_request:
     branches: [ master ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
-
+        node-version: [10.x, 11.x, 12.x, 13.x, 14.x]
     steps:
     - uses: actions/checkout@v2
+      name: Checkout
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
@@ -29,3 +27,17 @@ jobs:
     - run: npm test
       env:
         CI: true
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      name: Checkout
+    - name: Docker Build & Push to Docker Hub
+      uses: mr-smithers-excellent/docker-build-push@v3.1
+      with:
+        image: rwslinkman/contractpolice
+        registry: docker.io
+        dockerfile: docker/Dockerfile
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
