--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,15 +1,13 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: ContactPolice CI
-
 on:
   push:
-    branches: [ master, 'feature/docker-ci' ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
-
 jobs:
+  # Build application job
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -27,17 +25,3 @@ jobs:
     - run: npm test
       env:
         CI: true
-
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-      name: Checkout
-    - name: Docker Build & Push to Docker Hub
-      uses: mr-smithers-excellent/docker-build-push@v3.1
-      with:
-        image: rwslinkman/contractpolice
-        registry: docker.io
-        dockerfile: docker/Dockerfile
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
