--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -4,6 +4,25 @@ on:
     tags:
       - v*
 jobs:
+  # Build application job
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [10.x, 11.x, 12.x, 13.x, 14.x]
+    steps:
+      - uses: actions/checkout@v2
+        name: Checkout
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
+        env:
+          CI: true
+  # NPM Package registry
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
@@ -17,6 +36,8 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+
+  # Github packages
   publish-github:
     needs: build
     runs-on: ubuntu-latest
