--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,24 @@
-name: ContractPolice Docker Hub push
+name: ContractPolice public deployment
 on:
   push:
     tags:
       - v*
 jobs:
+  # Publish to NPM Package registry
+  publish-npm:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+          registry-url: https://registry.npmjs.org/
+      - run: npm ci
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+  # Deploy to Docker Hub
   dockerhub-deploy:
     name: Deploy to Docker Hub
     runs-on: ubuntu-latest
