--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,9 +1,10 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-name: ContactPolice CI
+name: ContactPolice build pipeline
 on:
   push:
-    branches: [ master ]
+    branches:
+      - *
   pull_request:
     branches: [ master ]
 jobs:
@@ -21,7 +22,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
+      name: Clean install dependencies
     - run: npm run build --if-present
+      name: Run build script
     - run: npm test
+      name: Run mocha tests
       env:
         CI: true
