--- a/contracts/v3/create_order_queryparams.yaml
+++ b/contracts/v3/create_order_queryparams.yaml
@@ -1,29 +1,14 @@
 contract:
   request:
     path: /v3/orders
-    method: POST
-    body:
-      customer: Rick
-      transactionId: <uuid>
-      items:
-        - product: Hamburger
-          quantity: 2
-          price: 20
-        - product: Fries
-          quantity: 1
-          price: 5
-        - product: Chicken nuggets
-          quantity: 1
-          price: 5
-        - product: Milkshake
-          quantity: 2
-          procie: 10
+    method: GET
     headers:
-      - Content-Type: application/json
       - Accept: application/json
+    params:
+      - orderId: abcd-efghi-jklmn-opqrst
   response:
     body:
-      orderId: <anyString>
+      orderId: abcd-efghi-jklmn-opqrst
       customer:
         firstname: Rick
         lastname: Slinkman
