Parsing query params in contract. Added test for url formatting in test runner based on query params.

--- a/contracts/v3/create_order_queryparams.yaml
+++ b/contracts/v3/create_order_queryparams.yaml
@@ -6,6 +6,7 @@ contract:
       - Accept: application/json
     params:
       - orderId: abcd-efghi-jklmn-opqrst
+      - token: tsrqpo-nmlkj-ihgfe-bcda
   response:
     body:
       orderId: abcd-efghi-jklmn-opqrst
