Finalized url formatting for requests with query parameters. Added test to increase coverate of testrunner. Updated contract to reflect actual effect of query params.

--- a/contracts/v3/create_order_queryparams.yaml
+++ b/contracts/v3/create_order_queryparams.yaml
@@ -5,11 +5,11 @@ contract:
     headers:
       - Accept: application/json
     params:
-      - orderId: abcd-efghi-jklmn-opqrst
-      - token: tsrqpo-nmlkj-ihgfe-bcda
+      - orderId: tsrqpo-nmlkj-ihgfe-bcda
+      - token: abcd-efghi-jklmn-opqrst
   response:
     body:
-      orderId: abcd-efghi-jklmn-opqrst
+      orderId: tsrqpo-nmlkj-ihgfe-bcda
       customer:
         firstname: Rick
         lastname: Slinkman
