--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "js-yaml": "^3.13.1",
     "junit-report-builder": "^1.3.3",
-    "needle": "^2.3.3"
+    "needle": "^2.3.3",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
