--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@apidevtools/swagger-parser": "^10.0.1",
     "js-yaml": "^3.13.1",
     "junit-report-builder": "^1.3.3",
     "needle": "^2.3.3",
