Generating contract definitions for all Swagger & OpenAPI files in directory. Updated calls for CI and Docker usage scenarios. Extracted more functions to helper for re-use.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,5 +12,6 @@ COPY . .
 
 # Define output directory (mount destination for input files)
 RUN mkdir /contractpolice/ci-contracts
+RUN mkdir /contractpolice/generator
 
 ENTRYPOINT node run-ci.js
